# vpop-calibration

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  coverage.md  flake.nix  poetry.toml  pyproject.toml
ACOP26/: Generate_comparison_plots.ipynb
ACOP26/Benchmark_Data_Runtime/: Mavoglurant_Simwork_PDU_runtime.csv  Mavoglurant_Simwork_surrogate_MI_runtime.csv  Mavoglurant_nlmixr_MI_runtime.csv  Mavoglurant_nlmixr_PDU_runtime.csv
ACOP26/Benchmark_Data_convergence/: Mavoglurant_Simwork_ebe_MI.csv  Mavoglurant_Simwork_surrogate_ebe_MI.csv  Mavoglurant_Simwork_surrogate_ebe_PDU.csv  Mavoglurant_nlmixr_ebe_PDU.csv
ACOP26/Nlmixr_Model/: Mavoglurant_MI_convergence.R  Mavoglurant_MI_runtime.R  Mavoglurant_PDU_convergence.R
ACOP26/Simwork_Model/: Mavoglurant_convergence.ipynb  Mavoglurant_runtime.ipynb  Mavoglurant_surrogate_convergence.ipynb  Mavoglurant_surrogate_runtime.ipynb
R/: nlmixr2_benchmark.R
docs/: nlme_model.md  saem_implementation.md
examples/: benchmark_orange_trees.ipynb  benchmark_theophylline.ipynb  generate_data_nlme.ipynb  generate_data_ranges.ipynb  saem_gp_model.ipynb  saem_ode_model.ipynb  train_deep_kernel.ipynb  train_gp.ipynb
examples/benchmarking/: benchmark_orange_trees.ipynb  benchmark_theophylline.ipynb
examples/saem/: saem_gp_model.ipynb  saem_ode_model.ipynb  saem_simwork_model.ipynb
forguibou/: main.py
qspc26/: benchmark_nlmixr2_convergence.R  benchmark_nlmixr2_runtime.R  benchmark_nlmixr2_tmdd.R  benchmark_pysaem_convergence.ipynb  benchmark_pysaem_tmdd.ipynb  generate_comparison_plots.ipynb  generate_perf_plots.ipynb  generate_synthetic_data.R  references.md  tmdd_benchmark.md  tmdd_model.md
vpop_calibration/: __init__.py  data_generation.py  diagnostics.py  interface.py  metropolis_hastings.py  nlme.py  ode.py  saem.py  structural_model.py  structural_model_legacy.py  taskmap.py  utils.py  vpop.py
(+138 files in other folders)
