[project]
name = "vpop-calibration"
version = "0.1.0"
description = ""
authors = [{ name = "Paul Lemarre", email = "paul.lemarre@novainsilico.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.1%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=8f8b3cfc53010a4b4a3c7ecb88c212e9decc4f5eeb6af75c3c803937d2d60947",
    "gpytorch (>=1.14.2,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "uuid (>=1.30,<2.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
ipython = "^9.7.0"
jupyterlab = "^4.4.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
